[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxmp"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "jax>=0.4.0",
    "jaxlib",
    "jaxtyping",
    "jaxlie>=1.0.0",
    "jax_dataclasses>=1.0.0",
    "jaxls",
    "tyro",
    "yourdfpy",
    "viser",
    "robot_descriptions",
]
